--- a/frontend/views/template/footermenu.html
+++ b/frontend/views/template/footermenu.html
@@ -45,33 +45,42 @@
             </div>
         </div>
         <div class="col-md-4 col-md-offset-4">
-            <div>
-                <p class="sec-head">Need Help?</p>
-                <p>Call Us: +91 98200 98200</p>
-                <p>Write to Us: <a href="">email@rawnature.com</a></p>
-            </div>
-            <div class="social-icons">
-                <p class="inblock marg0">Find Us:</p>
-                <ul class="list-unstyled list-inline inblock sec-content">
-                    <li>
-                        <a href=""><img src="img/home/Facebook-Icon@4x.png" alt="" class="img-responsive icons"></a>
-                    </li>
-                    <li>
-                        <a href=""><img src="img/home/Twitter-Icon@4x.png" alt="" class="img-responsive icons"></a>
-                    </li>
-                    <li>
-                        <a href=""><img src="img/home/Instagram-Icon@4x.png" alt="" class="img-responsive icons"></a>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <ul class="list-inline list-unstyled terms-link">
-                    <li><a href="">Terms &amp; Condition</a></li>
-                    <li><a href="">Privacy Policy</a></li>
-                </ul>
-            </div>
+            <h5 class="sec-head">Need Help?</h5>
+            <ul class="list-unstyled sec-content">
+                <li>
+                    <a href="">Call Us: +91 98200 98200</a>
+                </li>
+                <li>
+                    <div>
+                        <p>Write to Us: <a href="">email@rawnature.com</a></p>
+                    </div>
+                </li>
+                <li>
+                    <div class="social-icons">
+                        <p class="inblock marg0">Find Us:</p>
+                        <ul class="list-unstyled list-inline inblock sec-content">
+                            <li>
+                                <a href=""><img src="img/home/Facebook-Icon@4x.png" alt="" class="img-responsive icons"></a>
+                            </li>
+                            <li>
+                                <a href=""><img src="img/home/Twitter-Icon@4x.png" alt="" class="img-responsive icons"></a>
+                            </li>
+                            <li>
+                                <a href=""><img src="img/home/Instagram-Icon@4x.png" alt="" class="img-responsive icons"></a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
+                <li>
+                    <div class="terms-link">
+                        <ul class="list-inline list-unstyled">
+                            <li><a href="">Terms &amp; Condition</a></li>
+                            <li>|</li>
+                            <li><a href="">Privacy Policy</a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
         </div>
-
     </div>
-</div>
 </div>
