--- a/frontend/views/template/header.html
+++ b/frontend/views/template/header.html
@@ -1,16 +1,34 @@
 <header hide-on-scrol>
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top custom-navbar">
+        <div class="container">
+            <div class="navbar-header custom-logo">
+                <a class="navbar-brand custom-brand" ui-sref="home"><img src="/img/raw-logo.png" alt="raw-logo" class="img-responsive" width="190px"> </a>
+            </div>
+            <div class="navbar-right custom-right">
+                <ul class="nav navbar-nav log-in">
+                    <li><a href="#">Login</a></li>
+                    <li><a href="#">Sign In</a></li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#"><img src="img/home/cart-icon.png" alt="" class="img-responsive"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-collapse" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-                <a class="navbar-brand" ui-sref="home"><img src="/img/logo.png" alt="logo" width="20"> </a>
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <div class="visible-xs">
+                    <a class="navbar-brand" ui-sref="home"><img src="/img/raw-logo.png" alt="raw-logo" class="img-responsive"> </a>
+                </div>
             </div>
-            <div class="collapse navbar-collapse" id="nav-collapse">
+            <div class="collapse navbar-collapse border-line" id="nav-collapse">
                 <div ng-include="template.menu" class="template menu"></div>
             </div>
         </div>
