--- a/frontend/views/template/menu.html
+++ b/frontend/views/template/menu.html
@@ -1,12 +1,28 @@
-<ul class="nav navbar-nav">
-  <li ng-repeat="menu in navigation" ui-sref-active="active">
+<ul class="nav navbar-nav custom-nav">
+  <!--<li ng-repeat="menu in navigation" ui-sref-active="active">-->
+  <li ng-repeat="menu in navigation">
     <a ui-sref="{{menu.anchor}}" ng-if="menu.anchor">{{menu.name}}</a>
     <a href="{{menu.link}}" ng-if="menu.link">{{menu.name}}</a>
     <ul class="dropdown-menu" ng-if="menu.subnav!='';">
-      <li ng-repeat="submenu in menu.subnav" ui-sref-active="active">
+      <!--<li ng-repeat="submenu in menu.subnav" ui-sref-active="active">-->
+      <li ng-repeat="submenu in menu.subnav">
         <a ui-serf="{{submenu.anchor}}" ng-if="submenu.anchor">{{submenu.name}}</a>
         <a herf="{{submenu.link}}" ng-if="submenu.link">{{submenu.name}}</a>
       </li>
     </ul>
   </li>
 </ul>
+<form class="navbar-form navbar-right custom-right">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search">
+        <div class="input-group-btn">
+          <button class="btn btn-default btn-search" type="submit">
+            <i class="fa fa-search" aria-hidden="true"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
