--- a/frontend/views/template/footer.html
+++ b/frontend/views/template/footer.html
@@ -2,12 +2,12 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-6">
-                <p>Copyright &copy; RawNature Pvt. Ltd.{{template.year}}. | All Right Resvered.</p>
+                <p>Copyright &copy; RawNature Pvt. Ltd.{{template.year}} | All Right Resvered</p>
             </div>
             <div class="col-sm-6">
                 <div class="pull-right">
-                    <p>Designed by <a href="http://www.aavidcode.com" target="_blank">Aavidcode</a>. | Developed by <a href="http://www.aavidcode.com"
-                            target="_blank">Aavidcode</a>.</p>
+                    <p>Designed by <a href="http://www.aavidcode.com" target="_blank">Aavidcode</a> | Developed by <a href="http://www.aavidcode.com"
+                            target="_blank">Aavidcode</a></p>
                 </div>
             </div>
         </div>
