--- a/frontend/views/template/header.html
+++ b/frontend/views/template/header.html
@@ -15,6 +15,7 @@
                     </li>
                 </ul>
             </div>
+            <div class="clearfix"></div>
         </div>
         <div class="container">
             <div class="navbar-header">
