--- a/frontend/views/template/menu.html
+++ b/frontend/views/template/menu.html
@@ -3,13 +3,22 @@
   <li ng-repeat="menu in navigation">
     <a ui-sref="{{menu.anchor}}" ng-if="menu.anchor">{{menu.name}}</a>
     <a href="{{menu.link}}" ng-if="menu.link">{{menu.name}}</a>
-    <ul class="dropdown-menu" ng-if="menu.subnav!='';">
-      <!--<li ng-repeat="submenu in menu.subnav" ui-sref-active="active">-->
-      <li ng-repeat="submenu in menu.subnav">
-        <a ui-serf="{{submenu.anchor}}" ng-if="submenu.anchor">{{submenu.name}}</a>
-        <a herf="{{submenu.link}}" ng-if="submenu.link">{{submenu.name}}</a>
-      </li>
-    </ul>
+    <div class="drop-panel arrow_box dropdown-menu" ng-if="menu.subnav!='';">
+      <ul class="custom-dropdown inblock list-unstyled">
+        <!--<li ng-repeat="submenu in menu.subnav" ui-sref-active="active">-->
+        <li ng-repeat="submenu in menu.subnav">
+          <a ui-serf="{{submenu.anchor}}" ng-if="submenu.anchor">{{submenu.name}}</a>
+          <!--<a herf="{{submenu.link}}" ng-if="submenu.link">{{submenu.name}}</a>-->
+        </li>
+      </ul>
+      <ul class="custom-dropdown inblock list-unstyled">
+        <!--<li ng-repeat="submenu in menu.subnav1" ui-sref-active="active">-->
+        <li ng-repeat="submenu in menu.subnav1">
+          <a ui-serf="{{submenu.anchor}}" ng-if="submenu.anchor">{{submenu.name}}</a>
+          <!--<a herf="{{submenu.link}}" ng-if="submenu.link">{{submenu.name}}</a>-->
+        </li>
+      </ul>
+    </div>
   </li>
 </ul>
 <form class="navbar-form navbar-right custom-right">
